<resources>
    <string name="app_name">固定资产管理终端</string>
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码 </string>
    <string name="prompt_password1">再次确认密码 </string>
    <string name="action_sign_in">登录</string>
    <string name="action_exit">注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="scan_failed">Scan failed!</string>
</resources>
